Fixing width of Case study stats block on ie

--- a/content/themes/igcp/inc/scss/ie.scss
+++ b/content/themes/igcp/inc/scss/ie.scss
@@ -67,6 +67,9 @@
         margin-left: auto;
         margin-right: auto;
       }
+      @include break-min($lg) {
+        @include ignore-restrained-width;
+      }
     }
 
   }
